--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_bg"
             android:hint="@string/hint_email"
-            android:inputType="textCapWords"
+            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/white"
