--- a/app/src/main/res/layout/list_item_cart.xml
+++ b/app/src/main/res/layout/list_item_cart.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
+    android:layout_marginTop="@dimen/space_10"
     android:layout_height="match_parent">
 
 
@@ -9,30 +11,26 @@
         android:id="@+id/close"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/close_btn" />
+        android:background="@drawable/close_btn_cart"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
+        android:layout_marginTop="@dimen/space_5"
         android:layout_height="120dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="6dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="6dp"
-        android:contentDescription="@string/billing_address"
-        tools:src="@mipmap/ic_launcher" />
+        android:background="@drawable/c_1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 
     <RelativeLayout
         android:id="@+id/recipe_list_text_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/imageView">
+        android:layout_alignTop="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView">
 
         <TextView
             android:id="@+id/textViewName"
@@ -56,4 +54,65 @@
             android:textSize="16sp"
             tools:text="Subtitle" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/detail_line_2"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/text_color"
+        android:layout_marginTop="@dimen/space_12"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="42dp"
+        android:layout_height="32dp"
+        android:text="-"
+        android:layout_weight="1"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="@dimen/space_8"
+        android:background="@color/red"
+        android:id="@+id/button"
+        android:layout_below="@+id/detail_line_2"
+        android:layout_toEndOf="@+id/imageView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="1"
+        android:textColor="@color/white"
+        android:background="@color/red"
+        android:id="@+id/subt"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toEndOf="@+id/button" />
+
+    <Button
+        android:layout_width="42dp"
+        android:layout_height="32dp"
+        android:text="+"
+        android:background="@color/red"
+        android:id="@+id/plus"
+        android:layout_alignBottom="@+id/subt"
+        android:layout_toEndOf="@+id/subt" />
+
+    <ImageView
+        android:layout_width="22dp"
+        android:layout_height="18dp"
+        android:id="@+id/imageView3"
+        android:background="@drawable/in_stock_icon"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toStartOf="@+id/textView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="In Stock"
+        android:textSize="@dimen/space_15"
+        android:id="@+id/textView"
+        android:layout_alignTop="@+id/imageView3"
+        android:layout_toEndOf="@+id/close" />
+
+
 </RelativeLayout>
