--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -26,7 +26,7 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="end"
                 android:layout_marginRight="@dimen/space_20"
-                android:src="@drawable/ic_drawer" />
+                android:src="@drawable/ic_menu" />
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
 
