--- a/app/src/main/res/layout/list_item_cart.xml
+++ b/app/src/main/res/layout/list_item_cart.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/white"
-    android:layout_marginTop="@dimen/space_10"
+    android:layout_marginTop="@dimen/space_20"
     android:layout_height="match_parent">
 
 
     <Button
         android:id="@+id/close"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="@dimen/space_5"
         android:background="@drawable/close_btn_cart"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -18,8 +19,9 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
-        android:layout_marginTop="@dimen/space_5"
+        android:layout_marginTop="@dimen/space_8"
         android:layout_height="120dp"
+        android:layout_marginBottom="@dimen/space_5"
         android:background="@drawable/c_1"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -36,72 +38,89 @@
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="4dp"
+            android:textStyle="bold"
             android:layout_marginRight="8dp"
-            android:textSize="18sp"
+            android:textSize="16sp"
             tools:text="Title" />
-
+.
         <TextView
             android:id="@+id/textViewDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textViewName"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="2dp"
             android:ellipsize="end"
+            android:textStyle="bold"
             android:maxLines="3"
-            android:textSize="16sp"
+            android:textSize="14sp"
             tools:text="Subtitle" />
+        <TextView
+            android:id="@+id/textViewQty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewName"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="22dp"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            android:maxLines="3"
+            android:textSize="14sp"
+            tools:text="Quantity" />
     </RelativeLayout>
 
-    <TextView
+    <View
         android:id="@+id/detail_line_2"
         android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/text_color"
-        android:layout_marginTop="@dimen/space_12"
+        android:layout_height="2dp"
+        android:background="@color/gray_btn_bg_color"
         android:layout_below="@+id/imageView"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+         />
 
-    <Button
-        android:layout_width="42dp"
+  <Button
+        android:layout_width="36dp"
         android:layout_height="32dp"
         android:text="-"
         android:layout_weight="1"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="@dimen/space_8"
-        android:background="@color/red"
-        android:id="@+id/button"
+        android:background="@color/white"
+        android:id="@+id/minus"
         android:layout_below="@+id/detail_line_2"
         android:layout_toEndOf="@+id/imageView" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="28dp"
         android:layout_height="32dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="1"
-        android:textColor="@color/white"
-        android:background="@color/red"
-        android:id="@+id/subt"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toEndOf="@+id/button" />
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_button"
+        android:id="@+id/count"
+        android:textSize="12dp"
+        android:layout_above="@+id/detail_line_3"
+        android:layout_toEndOf="@+id/minus" />
 
     <Button
-        android:layout_width="42dp"
+        android:layout_width="36dp"
         android:layout_height="32dp"
         android:text="+"
-        android:background="@color/red"
+        android:background="@drawable/rectangle_button"
         android:id="@+id/plus"
-        android:layout_alignBottom="@+id/subt"
-        android:layout_toEndOf="@+id/subt" />
+        android:layout_above="@+id/detail_line_3"
+        android:layout_toEndOf="@+id/count" />
 
     <ImageView
-        android:layout_width="22dp"
-        android:layout_height="18dp"
+        android:layout_width="23dp"
+        android:layout_height="21dp"
         android:id="@+id/imageView3"
+        android:layout_marginBottom="@dimen/space_5"
         android:background="@drawable/in_stock_icon"
-        android:layout_alignBottom="@+id/button"
+        android:layout_alignBottom="@+id/minus"
         android:layout_toStartOf="@+id/textView" />
 
     <TextView
@@ -109,10 +128,22 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="In Stock"
+        android:layout_marginLeft="@dimen/space_5"
+        android:textColor="@color/green"
         android:textSize="@dimen/space_15"
         android:id="@+id/textView"
+
         android:layout_alignTop="@+id/imageView3"
         android:layout_toEndOf="@+id/close" />
+
+    <View
+        android:id="@+id/detail_line_3"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@+id/minus"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp" />
+
 
 
 </RelativeLayout>
