--- a/app/src/main/res/layout/product_detail_activity.xml
+++ b/app/src/main/res/layout/product_detail_activity.xml
@@ -73,7 +73,8 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
         <ImageView
             android:id="@+id/detail_img"
@@ -136,49 +137,39 @@
                 android:text="Ex Tax"
                 android:textColor="@color/grey"
                 android:textSize="20sp" />
-
-
+            <ImageButton
+                android:id="@+id/detail_add"
+                android:layout_width="53dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="70dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/circle_cart_icon_purple"
+                android:src="@drawable/cart_icon_button"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:layout_weight="0.14"
+                android:layout_marginStart="63dp"
+                android:layout_alignTop="@+id/detail_tax"
+                android:layout_toEndOf="@+id/detail_tax" />
         </RelativeLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/detail_qty"
+                android:id="@+id/detail_des_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:text="Qty: "
-                android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/detail_edt_qty"
-                android:layout_width="85dp"
-                android:layout_height="25dp"></Spinner>
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="4dp"
+                android:text="Description :"
+                android:textSize="15dp" />
 
 
-        </LinearLayout>
-
-
-        <Button
-            android:id="@+id/detail_add"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_selector_save"
-            android:text="@string/add_to_cart"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
-
-        <TextView
+            <TextView
             android:id="@+id/detail_des"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
