--- a/app/src/main/res/layout/shopping_cart.xml
+++ b/app/src/main/res/layout/shopping_cart.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:gravity="center_horizontal"
-        android:layout_marginTop="@dimen/space_5"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/space_1"
         android:layout_marginBottom="@dimen/space_15"
         android:id="@+id/welcome">
 
@@ -20,25 +21,33 @@
 
 
     </FrameLayout>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginLeft="@dimen/space_10"
-        android:layout_marginRight="@dimen/space_10"
-        android:paddingLeft="@dimen/space_15"
-        android:paddingRight="@dimen/space_15"
-        android:id="@+id/listView" />
-    <TextView
-        android:id="@+id/empty"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="" />
-    <RelativeLayout
+        android:layout_weight="1"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+    <com.slidingimages.NestedListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/space_20"
+        android:layout_marginRight="@dimen/space_20"
+        android:paddingLeft="@dimen/space_1"
+        android:background="@drawable/rounded_corner_listview"
+        android:paddingRight="@dimen/space_1"
+        android:dividerHeight="7sp"
+        android:id="@+id/listView" />
+
+   <LinearLayout
         android:layout_width="322dp"
         android:layout_height="52dp"
         android:layout_marginLeft="@dimen/space_20"
-        android:background="@drawable/edittext_bg"
+        android:background="@drawable/rounded_corner_listview"
         android:layout_marginTop="@dimen/space_15"
          >
 
@@ -49,22 +58,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="10dp"
         android:text="@string/total_quanity"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textSize="@dimen/space_15" />
 
     <TextView
         android:id="@+id/total_quanity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/name"
-        android:layout_marginLeft="165dp"
+        android:layout_marginLeft="180dp"
+        android:textSize="@dimen/space_15"
+        android:layout_marginTop="@dimen/space_10"
         android:layout_toRightOf="@+id/name"
         android:text="1" >
 
     </TextView>
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="352dp"
@@ -79,9 +90,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:gravity="center"
-        android:textColor="#a41c9a"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="18sp"
-        android:layout_marginLeft="110dp"
+        android:layout_marginLeft="70dp"
         android:text="@string/sub_total"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -92,10 +104,11 @@
             android:layout_alignBottom="@+id/subtotal_text"
             android:layout_marginLeft="10dp"
             android:textSize="18sp"
-            android:textColor="#a41c9a"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:paddingBottom="@dimen/space_2"
             android:layout_toRightOf="@+id/subtotal_text"
-            android:text=":100" />
+            android:text=":100 AED" />
 
 
 
@@ -110,28 +123,30 @@
         android:id="@+id/check_out"
         android:layout_width="305dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="@dimen/space_15"
+        android:layout_marginLeft="@dimen/space_10"
         android:gravity="center"
-        android:background="@android:color/holo_purple"
+        android:background="@drawable/round_corner_button"
         android:text="@string/check_out"
         android:textAlignment="center"
         android:textColor="@color/white" />
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/space_12"
-        android:gravity="center"
-        android:layout_height="wrap_content">
 
-        <TextView
+            <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/space_12"
+            android:gravity="center"
+                android:layout_marginBottom="@dimen/space_8"
+            android:layout_height="wrap_content">
+
+            <TextView
             android:id="@+id/enter_promo_code_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView1"
             android:gravity="center"
-            android:textColor="#a41c9a"
-            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textSize="16sp" android:textStyle="bold"
             android:layout_marginLeft="15dp"
             android:text="@string/enter_promo_code"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -139,38 +154,42 @@
     <EditText
         android:id="@+id/promo_code"
         android:layout_width="140dp"
-        android:layout_height="48dp"
+        android:layout_height="42dp"
         android:paddingLeft="@dimen/space_8"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/edittext_bg"
+        android:background="@drawable/rounded_corner_listview"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        android:textColorHint="@color/black"
         android:hint="@string/promo_code"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
         android:id="@+id/apply"
-        android:layout_width="95dp"
-        android:layout_height="42dp"
+        android:layout_width="87dp"
+        android:layout_height="38dp"
         android:layout_alignBottom="@+id/promo_code"
-        android:background="@android:color/holo_purple"
         android:layout_marginLeft="15dp"
+        android:background="@drawable/round_corner_button"
         android:layout_marginBottom="@dimen/space_3"
         android:textColor="@color/white"
         android:layout_toRightOf="@+id/promo_code"
        android:text="@string/apply">
     </Button>
-</RelativeLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
     <FrameLayout
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
             android:id="@+id/bottom_navigation"
