--- a/app/src/main/res/layout/special_offer.xml
+++ b/app/src/main/res/layout/special_offer.xml
@@ -33,7 +33,7 @@
                     android:layout_gravity="end"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_drawer" />
+                    android:src="@drawable/ic_menu" />
             </android.support.v7.widget.Toolbar>
         </LinearLayout>
 
